[SoundSpectrum] refactor sound spectrum to area and widget

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ set(PROJECT_SOURCES
         soundspectrumwidget.h soundspectrumwidget.cpp
         audiodecoderwidget.h audiodecoderwidget.cpp
 
+        soundspectrumarea.h soundspectrumarea.cpp
+
         soundeditor.cpp soundeditor.h soundeditor.ui
 )
 
