--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ set(PROJECT_SOURCES
     musicxml/musicxmlmodel.h musicxml/musicxmlmodel.cpp
     musicxml/musicxmlparser.h musicxml/musicxmlparser.cpp
     musicxml/musicxmlfile.h musicxml/musicxmlfile.cpp
-    musicxml/musicxmldecoderwidget.h musicxml/musicxmldecoderwidget.cpp
+    musicxml/musicxmlwidget.h musicxml/musicxmlwidget.cpp
 
     sounddataparser.h sounddataparser.cpp
     sounddatafile.h sounddatafile.cpp
